zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/switch_on_non_err_union.zig
pub fn main() void {
    false catch |err| switch (err) {
        else => {},
    };
}

// error
//
// :2:11: error: expected error union type, found 'bool'
